@@ -7,6 +7,7 @@ Version 1.0.xxxx (January xxth 2014)
 - Fixed: Scene/Group editor now displays Level is the first light/switch supports it when entering the page
 - Changed: Raspberry Pi temperature reporting intern. (should save an extra return in the log output)
 - Changed: Mobile Dashboard now uses buttons to toggle state
+- Implemented: EnOcean ESP2 (TCM-120) support for On/Off/Dimmer,Temperature,Humidity and LightSensors
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
